--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,10 @@
         "express": "^4.18.3",
         "express-rate-limit": "^7.2.0",
         "helmet": "^7.1.0",
+        "js-yaml": "^4.1.1",
         "jsonwebtoken": "^9.0.2",
         "socket.io": "^4.7.4",
+        "swagger-ui-express": "^5.0.1",
         "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
@@ -41,6 +43,7 @@
         "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
+        "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
         "artillery": "^2.0.5",
         "eslint": "^8.57.0",
