--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
         "db:migrate": "prisma migrate dev",
         "db:generate": "prisma generate",
         "db:studio": "prisma studio",
-        "db:seed": "ts-node prisma/seed.ts"
+        "db:seed": "cross-env TEST_MODE=true ts-node prisma/seed.ts",
+        "db:clear-mock": "cross-env TEST_MODE=true ts-node prisma/clear.ts"
     },
     "dependencies": {
         "@prisma/client": "^5.10.2",
@@ -38,6 +39,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.3.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jest": "^30.0.0",
@@ -46,6 +48,7 @@
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
         "artillery": "^2.0.5",
+        "cross-env": "^10.1.0",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
         "prisma": "^5.10.2",
