--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,6 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-dialog": "^1.0.5",
-        "@wagmi/connectors": "^5.0.0",
-        "@wagmi/core": "^2.8.0",
-        "@walletconnect/modal": "^2.6.2",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-select": "^2.0.0",
@@ -26,6 +23,9 @@
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-query": "^5.25.0",
+        "@wagmi/connectors": "^5.0.0",
+        "@wagmi/core": "^2.8.0",
+        "@walletconnect/modal": "^2.6.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "i18next": "^23.10.1",
@@ -35,6 +35,7 @@
         "react-hook-form": "^7.51.0",
         "react-i18next": "^14.1.0",
         "react-router-dom": "^6.22.3",
+        "recharts": "^3.7.0",
         "socket.io-client": "^4.7.4",
         "tailwind-merge": "^2.2.1",
         "viem": "^2.8.4",
