--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
         "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
         "artillery": "^2.0.5",
@@ -53,6 +54,7 @@
         "jest": "^29.7.0",
         "prisma": "^5.10.2",
         "socket.io-client": "^4.7.4",
+        "supertest": "^7.2.2",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
