--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react": "^4.2.1",
+        "artillery": "^2.0.30",
         "autoprefixer": "^10.4.18",
         "cypress": "^15.10.0",
         "eslint": "^8.57.0",
