--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.10.2",
+        "artillery-plugin-expect": "^2.24.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
