docs: merge CI/CD + Deployment into README, update coverage, add prod mock guards
- Merge CI_CD_SETUP.md and DEPLOYMENT.md into README  Setup & Deployment
- Update test badges: 420 total (257 Jest, 62 Hardhat, 101 Cypress)
- Add Jest coverage table (94.55% stmts, 88.72% branches, 97.67% funcs)
- Prune 3 stale 'Fixed' failure notes from README
- Add prod mock data guards: NODE_ENV=production blocks USE_MOCK_DATA
- Frontend: prod error banner on API failure, no silent mock fallback
- New env-guard.test.ts: 18 tests for prod/dev switch + empty datasets
- Fix PRODUCTION_CHECKLIST.md cross-reference to new README section
- Update .env.example files with prod safety warnings
- Add seller targeting, form wizard, lander export features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -53,3 +53,9 @@ BASESCAN_API_KEY=
 # Optional Services
 # SENTRY_DSN=
 # SENDGRID_API_KEY=
+
+# Analytics Mock Toggle
+# Set to "true" to serve deterministic Faker.js data from analytics endpoints.
+# Set to "false" (or omit) for real Prisma/Redis queries.
+# ⚠️  IGNORED when NODE_ENV=production — real data always used in prod.
+USE_MOCK_DATA=false
