--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -21,3 +21,9 @@ VITE_CRE_CONTRACT_ADDRESS=0x00f1f1C16e1431FFaAc3d44c608EFb5F8Db257A4
 VITE_MARKETPLACE_ADDRESS=0x3b1bBb196e65BE66c2fB18DB70A3513c1dDeB288
 VITE_LEAD_NFT_ADDRESS=0xB93A1Ff499BdEaf74710F760Eb2B6bc5b62f8546
 VITE_ESCROW_ADDRESS=0x19B7a082e93B096B0516FA46E67d4168DdCD9004
+
+# Analytics Mock Toggle
+# Set to "true" to use seeded deterministic mock data in analytics dashboards.
+# Set to "false" (or omit) to call the real backend API.
+# ⚠️  IGNORED in production builds (import.meta.env.PROD=true).
+VITE_USE_MOCK_DATA=false
