--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
         "db:generate": "prisma generate",
         "db:studio": "prisma studio",
         "db:seed": "cross-env TEST_MODE=true ts-node prisma/seed.ts",
-        "db:clear-mock": "cross-env TEST_MODE=true ts-node prisma/clear.ts"
+        "db:clear-mock": "cross-env TEST_MODE=true ts-node prisma/clear.ts",
+        "demo:seed": "tsx scripts/seed-demo-leads.ts",
+        "demo:clear": "tsx scripts/seed-demo-leads.ts clear"
     },
     "dependencies": {
         "@prisma/client": "^5.10.2",
