--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
-        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slider": "^1.1.2",
@@ -26,8 +27,8 @@
         "@wagmi/connectors": "^5.0.0",
         "@wagmi/core": "^2.8.0",
         "@walletconnect/modal": "^2.6.2",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "i18next": "^23.10.1",
         "lucide-react": "^0.344.0",
         "react": "^18.2.0",
@@ -37,7 +38,7 @@
         "react-router-dom": "^6.22.3",
         "recharts": "^3.7.0",
         "socket.io-client": "^4.7.4",
-        "tailwind-merge": "^2.2.1",
+        "tailwind-merge": "^2.6.1",
         "viem": "^2.8.4",
         "wagmi": "^2.5.7",
         "zod": "^3.22.4"
