--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@rainbow-me/rainbowkit": "^2.2.10",
         "@tanstack/react-query": "^5.25.0",
         "@wagmi/connectors": "^5.0.0",
         "@wagmi/core": "^2.8.0",
