feat: Platform-owned vertical NFTs with resale

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,6 +43,12 @@ CRE_SUBSCRIPTION_ID=0
 # Deployer (for contract deployment — NEVER commit real key)
 DEPLOYER_PRIVATE_KEY=0x_your_deployer_private_key
 
+# Platform NFT Ownership
+PLATFORM_WALLET_ADDRESS=0xYourPlatformWalletAddress  # Wallet that owns minted vertical NFTs (defaults to DEPLOYER_ADDRESS)
+
+# Chainlink Price Feed (for resale fair pricing)
+CHAINLINK_PRICE_FEED_ADDRESS=                         # ETH/USD or USDC/USD feed address (simulated if empty)
+
 # Privacy Suite
 PRIVACY_ENCRYPTION_KEY=generate-with-openssl-rand-hex-32
 
