--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     runtime: node
     plan: free
     rootDir: backend
-    buildCommand: npm install --include=dev && npx prisma generate && npx prisma db push --skip-generate && npm run build
+    buildCommand: npm install --include=dev && npx prisma generate && npx prisma db push --skip-generate --accept-data-loss && npm run build
     startCommand: npm run start
     healthCheckPath: /health
     envVars:
