--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
         "helmet": "^7.1.0",
         "js-yaml": "^4.1.1",
         "jsonwebtoken": "^9.0.2",
+        "node-cron": "^4.2.1",
         "socket.io": "^4.7.4",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^9.0.1",
@@ -48,6 +49,7 @@
         "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.24",
+        "@types/node-cron": "^3.0.11",
         "@types/supertest": "^6.0.3",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
