--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,7 @@
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.4.2"
+        "typescript": "^5.4.2",
+        "vitest": "^4.0.18"
     }
 }
