--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,8 @@
         "@types/supertest": "^6.0.3",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^8.55.0",
+        "@typescript-eslint/parser": "^8.55.0",
         "artillery": "^2.0.5",
         "cross-env": "^10.1.0",
         "eslint": "^8.57.0",
