--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,8 @@
     "devDependencies": {
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18.2.21",
+        "@typescript-eslint/eslint-plugin": "^8.55.0",
+        "@typescript-eslint/parser": "^8.55.0",
         "@vitejs/plugin-react": "^4.2.1",
         "artillery": "^2.0.30",
         "autoprefixer": "^10.4.18",
