chore: harden .gitignore, remove all stale file references from docs
- .gitignore: add test-results/, cypress-output*, scratch/junk patterns
- README.md: remove re-run-tests.sh references (x3)
- TEST_VERIFICATION.md: remove test-results/ output paths (x4)
- SUBMISSION_CHECKLIST.md: remove X_PROMOTION.md reference
- ON_CHAIN_VERIFICATION.md: update simulation output to stdout

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@ contracts/coverage.json
 # Testing
 coverage/
 *.lcov
+test-results/
+cypress-output*.txt
+cypress/screenshots/
+cypress/videos/
+re-run-tests.sh
+
+# Scratch / junk (never commit)
+*wtf*
+*scratch*
+*promotion*
 
 # Security scan reports (may contain vulnerability details)
 reports/
