chore: aggressive cleanup  remove 15 junk files, harden .gitignore
Deleted:
- backend: jest-results-latest.txt, test-output.txt, test-results.txt, vitest.config.ts
- backend/tests: load-test.yml, p1-load-reset.yml, test-plan.md
- backend/prisma/migration-logs/ (entire dir)
- contracts: deploy-output2.txt
- frontend: vite.config.d.ts, vite.config.js, *.tsbuildinfo
- scripts: test-seller-flow.sh, test-validate.sh

.gitignore: added *.tsbuildinfo, vite.config.d.ts/js, deploy-output*, migration-logs/

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,12 @@ backend/prisma/*.db-journal
 .cache/
 *.tsbuildinfo
 frontend/tsc_errors.txt
+frontend/vite.config.d.ts
+frontend/vite.config.js
+
+# Deploy / migration logs
+**/deploy-output*.txt
+**/migration-logs/
 
 # Private keys — CRITICAL: never commit
 *.pem
