fix: resolve all README audit findings  17 corrections
Critical:
- package.json: MIT  UNLICENSED (matches proprietary license)
- backend/package.json: removed stale test:load script, removed vitest dep,
  moved artillery-plugin-expect to devDeps
- mcp-server/.env.example: created (was missing)
- render.yaml: added MARKETPLACE_ADDRESS

README inaccuracies:
- Contract badge 89, added CustomLeadFeed.sol to table
- Cypress 37 specs, updated details table with all 7
- Hardhat 811 suites, added VerticalNFT/platform/auction
- VerticalAuction: sealed-bid  ascending (matches actual contract)
- Auto-bid: 78 criteria (geo include/exclude are separate)
- Removed broken docs/DEPLOYMENT.md reference
- Fixed redundant test command block
- Fixed middleware description (CORS is in index.ts)

Root package.json:
- Added db:seed and db:clear-mock workspace-forwarding scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,6 @@
         "test:coverage": "jest --coverage",
         "test:compliance": "jest tests/compliance --verbose",
         "test:security": "jest tests/security --verbose",
-        "test:load": "artillery run tests/load-test.yml",
         "db:push": "prisma db push",
         "db:migrate": "prisma migrate dev",
         "db:generate": "prisma generate",
@@ -28,7 +27,6 @@
     },
     "dependencies": {
         "@prisma/client": "^5.10.2",
-        "artillery-plugin-expect": "^2.24.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
@@ -67,6 +65,6 @@
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.4.2",
-        "vitest": "^4.0.18"
+        "artillery-plugin-expect": "^2.24.0"
     }
 }
