--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "description": "Decentralized Real-Time Bidding Platform for Lead Marketplace",
-  "keywords": ["web3", "rtb", "leads", "blockchain", "chainlink"],
+  "keywords": [
+    "web3",
+    "rtb",
+    "leads",
+    "blockchain",
+    "chainlink"
+  ],
   "author": "bnmbnmai",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "workspaces": [
     "backend",
     "frontend",
@@ -25,7 +31,9 @@
     "contracts:test": "npm run test --workspace=contracts",
     "db:push": "npm run db:push --workspace=backend",
     "db:migrate": "npm run db:migrate --workspace=backend",
-    "db:studio": "npm run db:studio --workspace=backend"
+    "db:studio": "npm run db:studio --workspace=backend",
+    "db:seed": "npm run db:seed --workspace=backend",
+    "db:clear-mock": "npm run db:clear-mock --workspace=backend"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
