refactor: switch agent LLM from OpenAI to Kimi K2.5 (Moonshot AI)
- mcp.routes.ts: ReAct loop now calls Moonshot API (moonshot-v1-128k)
  with graceful fallback to keyword-based demo if KIMI_API_KEY unset
- SKILL.md: Python example updated to use ChatOpenAI with Kimi base_url
- .env.example (backend + mcp-server): added KIMI_API_KEY placeholder
- API key is server-side only, never sent to browser

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -65,3 +65,8 @@ BASESCAN_API_KEY=
 # Set to "false" (or omit) for real Prisma/Redis queries.
 # ⚠️  IGNORED when NODE_ENV=production — real data always used in prod.
 USE_MOCK_DATA=false
+
+# Kimi K2.5 (Moonshot AI) — used by the /api/v1/mcp/chat agent endpoint
+# Get a key at https://platform.moonshot.cn/
+# Set the real key in your hosting platform's env vars — never commit it.
+KIMI_API_KEY=sk-...
