--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -6,3 +6,7 @@
 API_BASE_URL=http://localhost:3001
 API_KEY=your-api-key
 MCP_PORT=3002
+
+# Kimi K2.5 (Moonshot AI) — used by the /chat agent endpoint
+# Set the real key in your hosting platform's env vars — never commit it.
+KIMI_API_KEY=sk-...
