--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -10,12 +10,12 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "express": "^4.18.2"
-    },
-    "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.0",
-        "ts-node": "^10.9.2",
+        "express": "^4.18.2",
         "typescript": "^5.3.2"
+    },
+    "devDependencies": {
+        "ts-node": "^10.9.2"
     }
 }
