feat: default to Base Sepolia with Sepolia fallback
- Reorder wagmi chains to [baseSepolia, sepolia] (wagmi uses first as default)
- All backend services prefer RPC_URL_BASE_SEPOLIA || RPC_URL_SEPOLIA
- All escrow/NFT address lookups prefer _BASE_SEPOLIA env vars
- Explorer links switched from sepolia.etherscan.io to sepolia.basescan.org
- Chain ID defaults changed from 11155111 to 84532
- Updated error messages and comments to reference Base Sepolia
- Added USDC consolidation script (scripts/consolidate-usdc.ts)
- Sepolia remains as a clean fallback throughout

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,16 +24,21 @@ RPC_URL_SEPOLIA=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
 RPC_URL_BASE_SEPOLIA=https://sepolia.base.org
 PAYMENT_RECIPIENT_ADDRESS=0xYourWalletAddress
 
-# Smart Contract Addresses (from deploy script output)
+# Smart Contract Addresses — Sepolia (fallback)
 ACE_CONTRACT_ADDRESS=
 CRE_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
 LEAD_NFT_CONTRACT_ADDRESS=
 ESCROW_CONTRACT_ADDRESS=
 
+# Smart Contract Addresses — Base Sepolia (primary)
+LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA=
+ESCROW_CONTRACT_ADDRESS_BASE_SEPOLIA=
+
 # USDC Contract Addresses
 USDC_SEPOLIA=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
 USDC_BASE_SEPOLIA=0x036CbD53842c5426634e7929541eC2318f3dCF7e
+USDC_CONTRACT_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
 
 # Chainlink
 CHAINLINK_ROUTER_SEPOLIA=0xb83E47C2bC239B3bf370bc41e1459A34b41238D0
