--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,6 +34,10 @@ ESCROW_CONTRACT_ADDRESS=
 # Smart Contract Addresses — Base Sepolia (primary)
 LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA=
 ESCROW_CONTRACT_ADDRESS_BASE_SEPOLIA=
+CRE_CONTRACT_ADDRESS_BASE_SEPOLIA=
+
+# CRE DON API Key (for Chainlink Functions scoring-data endpoint)
+CRE_API_KEY=
 
 # USDC Contract Addresses
 USDC_SEPOLIA=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
